# otel-condvar

./: Cargo.toml  README.md
src/: exit.rs  main.rs  sync.rs
