[package]
name = "otel-forkexec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-stdout = { version = "0.2", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", features = ["http-proto"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
tracing-subscriber = "0.3"
tracing = "0.1"

log = "0.4"